<?xml version="1.0"?>
<package format="2">
  <name>vineyard</name>
  <version>0.0.0</version>
  <description>The vineyard package</description>

  <maintainer email="antoine@todo.todo">antoine</maintainer>

  <license>TODO</license>

  <buildtool_depend>catkin</buildtool_depend>

  <depend>gazebo_ros</depend>
  <!-- The export tag contains other, unspecified, tags -->
  <export>
    <!-- Other tools can request additional information be placed here -->
    <gazebo_ros gazebo_model_path="${prefix}/models"/>
    <gazebo_ros gazebo_media_path="${prefix}/worlds"/>
  </export>
</package>
